v1.2.0.7:	Added Season plugin.
		Added ShopSellsScalingPotions plugin.
		Added InfiniteSundial plugin.
		Added administrator privileges warning when patching.
		Added new 'spawn at cursor' command for NPC plugin.
		Added /range command to UseTime plugin.
		Added new hotkey-command bindings. Check plugin notes.
		Added plugin support for IPluginInitialize, IPluginDrawInventory, IPluginUpdateTime.
		Fixed bug with plugin support for Newtonsoft.Json.dll.
v1.2.0.6:	Added plugin support for IPluginNPCLoot.
		Fixed NPC plugin to work when spawning negative IDs (special slimes).
v1.2.0.5:	Added plugin support for IPluginPlayerQuickBuff.
v1.2.0.4:	Changed blocks/walls/wires to use usetime 1 instead of 0.
		Added plugin support for Newtonsoft.Json.dll.
v1.2.0.3:	Added plugin support for IPluginChestSetupShop.
v1.2.0.2:	Moved Full Bright to a plugin with toggleable key.
		Added '/teleport plantera' and '/teleport strangeplant' commands to teleport plugin. Removed teleport plantera hotkey.
		Changed Teleport plugin method.
		Changed UseTime plugin to use 0 instead of 1 for picks/drills/axes/blocks/walls/wires.
		Added Builder buff / UseTime plugin warning.
		Reverted Reveal plugin changes.. Causing memory issues.
		Added ability to load plugins from subfolders with group compilation (allows for larger plugins).
		Added plugin support for IPluginPlayerGetItem.
v1.2.0.1:	Added SkipSplash plugin.
		Fixed UseTime (autoreuse) command bug.
		Fixed Respawn plugin.
		Fixed GodMode plugin to use statLifeMax2 instead of statLifeMax.
		Fixed Reveal plugin to use UpdateLighting instead of Update method.
		Changed Teleport plugin to use friendly teleport method.
v1.2.0.0:	Updated for Terraria 1.3.0.5.
		Added IPluginChatCommand.
		Added command functionality to ItemSpawner, NPC, Time, and UseTime plugins.
		Various bug fixes.
v1.1.0.12:	Changed UseTime to use [UseTime] category in Plugins.ini.
		Added Actuators to UseTime plugin.
		Added many warnings to patcher.