@@ -1,25 +1,21 @@
 ﻿using System;
 using GTRPlugins.UI;
 using Microsoft.Xna.Framework;
+using PluginLoader;
 using Terraria;
 
 namespace GTRPlugins
 {
-    public class LoadoutSwap
+    public class LoadoutSwap : IPluginDrawInventory
     {
         private static Button btnLoadoutSwap;
+
         static LoadoutSwap()
         {
             btnLoadoutSwap = new Button("Swap Loadout", new Vector2(502f, 298f), BtnLoadoutSwapClick);
             btnLoadoutSwap.Scale = 0.9f;
         }
-        public static void Draw(object sender, EventArgs e)
-        {
-            if (Main.player[Main.myPlayer].chest == -1 && Main.npcShop == 0)
-            {
-                btnLoadoutSwap.Draw();
-            }
-        }
+
         private static void BtnLoadoutSwapClick(object sender, EventArgs e)
         {
             Player player = Main.player[Main.myPlayer];
@@ -28,6 +24,14 @@ namespace GTRPlugins
                 Item item = player.armor[i].Clone();
                 player.armor[i] = player.armor[i + 10];
                 player.armor[i + 10] = item;
+            }
+        }
+
+        public void OnDrawInventory()
+        {
+            if (Main.player[Main.myPlayer].chest == -1 && Main.npcShop == 0)
+            {
+                btnLoadoutSwap.Draw();
             }
         }
     }
